# fuel-to-power-app

./: README.md  app.py  pyproject.toml  requirements.txt
src/fuel2power/: calc.py  tech.py  units.py
src/fuel2power.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_calc.py  test_inverse.py
