[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel2power"
version = "0.1.0"
description = "Fuel-to-power conversion calculator"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]